# cpp-ct-skkv-course

./: README.md
HW1/: main.c
HW2/: quat.hpp
Lab1/: main.c
Lab2/: CMakeLists.txt  audio_util.c  audio_util.h  main.c
Lab3/: README.md  Readme.md  bucket_storage.hpp
Lab4/cpp_lab_4/: Cell.cpp  Field.cpp  Field.h  GameOverWindow.cpp  SettingsWindow.cpp  WinWindow.cpp  cpp_lab_4.pro  main.cpp
Lab4/cpp_lab_4/translations/: language_en.ts
cpp_lab_4/: Cell.h  GameOverWindow.h  MainWindow.cpp  MainWindow.h  SettingsWindow.h  WinWindow.h  pprGzM.json  resources.qrc
cpp_lab_4/translations/: language_de.qm  language_de.ts  language_en.qm  language_es.qm  language_es.ts
